<resources>
    <string name="app_name">Gym 101</string>
    <!--menu=====================================================================================-->
    <string name="action_settings">Settings</string>
    <string name="action_profile">Profile</string>

    <!--messages=================================================================================-->
    <string name="machine_save_success">Machine saved with success.</string>
    <string name="all_fields_must_filled">All fields must be filled.</string>
    <string name="select_machine_days_exercise">Select a machine and days for the exercise.</string>
    <string name="exercise_save_success">Exercise saved with success.</string>
    <string name="workout_save_success">Workout saved with success.</string>
    <string name="workout_deleted">Workout entry deleted.</string>
    <string name="exercise_deleted">Exercise entry deleted.</string>
    <string name="machine_deleted">Machine entry deleted.</string>
    <string name="something_wrong">Something went wrong. Please try again.</string>
    <string name="data_lost_leave">All data provided will be lost. Leave anyway?</string>
    <string name="date_future">Date cannot be in the future.</string>
    <string name="machine_name_not_empty">The machine name cannot be empty.</string>
    <string name="no_exercises">No exercises saved</string>
    <string name="no_machines">No machines saved</string>
    <string name="no_exercise_selected">No exercise was selected.</string>
    <string name="no_machine_selected">No machine was selected.</string>
    <string name="delete_workout_confirmation">Delete workout entry?</string>
    <string name="delete_exercise_confirmation">Delete exercise entry?</string>
    <string name="delete_machine_confirmation">Delete machine entry?</string>
    <string name="duplicate_exercise">Exercise already exists.</string>
    <string name="duplicate_machine">Machine already exists.</string>
    <string name="select_exercise">Select an exercise</string>
    <string name="exercise_has_workout">This exercise cannot be deleted. It has one or more workouts linked to it.</string>
    <string name="machine_has_exercise">This machine cannot be deleted. It has one or more exercises linked to it.</string>

    <!--DB==========================================================================-->
    <string name="machine_id_db">_id</string>
    <string name="machine_name_db">machinename</string>
    <string name="machine_number_db">machinenumber</string>
    <string name="monday_db">mon</string>
    <string name="tuesday_db">tue</string>
    <string name="wednesday_db">wed</string>
    <string name="thursday_db">thu</string>
    <string name="friday_db">fri</string>
    <string name="saturday_db">sat</string>
    <string name="sunday_db">sun</string>
    <string name="a_db">a</string>
    <string name="b_db">b</string>
    <string name="c_db">c</string>
    <string name="d_db">d</string>

    <!--SP=======================================================================================-->
    <string name="sp_name">sp_gym101</string>
    <string name="sp_default_date">defaultdate</string>
    <string name="sp_exercise_id">exerciseid</string>
    <string name="sp_machine_id">machineid</string>
    <string name="sp_machine_name">machinename</string>
    <string name="sp_machine_number">machinenumber</string>

    <!--general==================================================================================-->
    <string name="date">Date</string>
    <string name="exercise_name">Exercise name</string>
    <string name="sets">Sets</string>
    <string name="repetitions">Repetitions</string>
    <string name="weight">Weight</string>
    <string name="distance">Distance</string>
    <string name="time">Time</string>
    <string name="machine">Machine</string>
    <string name="exercise">Exercise</string>
    <string name="workout">Workout</string>
    <string name="new_machine">New Machine</string>
    <string name="new_exercise">New Exercise</string>
    <string name="new_workout">New Workout</string>
    <string name="machine_name">Machine Name</string>
    <string name="name">Name</string>
    <string name="number">Number</string>
    <string name="blue">Blue</string>
    <string name="green">Green</string>
    <string name="orange">Orange</string>
    <string name="red">Red</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="save_caps">SAVE</string>
    <string name="cancel_caps">CANCEL</string>
    <string name="sunday_abv">S</string>
    <string name="monday_abv">M</string>
    <string name="tuesday_abv">T</string>
    <string name="wednesday_abv">W</string>
    <string name="thursday_abv">T</string>
    <string name="friday_abv">F</string>
    <string name="saturday_abv">S</string>
    <string name="treadmill">treadmill</string>
    <string name="speed">Speed</string>
    <string name="kg">Kg</string>
    <string name="km_h">Km/h</string>
    <string name="km">&#160;Km</string>
    <string name="yes">Yes</string>
    <string name="yes_caps">YES</string>
    <string name="no_caps">NO</string>
    <string name="id">_id</string>
    <string name="default_date">Monday, Jan 01 1990</string>
    <string name="default_machine_name">machinename</string>
    <string name="default_machine_number">-2</string>
    <string name="today">Today</string>
    <string name="a_caps">A</string>
    <string name="b_caps">B</string>
    <string name="c_caps">C</string>
    <string name="d_caps">D</string>
    <string name="error_caps">ERROR</string>
    <string name="sp_default_exercise_day">defaultexerciseday</string>
    <string name="ok_caps">OK</string>
    <string name="error">Error</string>
    <string name="is_new_workout">isNewWorkout</string>
    <string name="exercise_list">Exercise list</string>
    <string name="machine_list">Machine list</string>
    <string name="no_day_selected">At least one day has to be selected.</string>


</resources>
