<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialogNewExercise"
    android:layout_width="280dp"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@color/colorDarkYellow"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="12dp"
        android:paddingStart="24sp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="center"
            android:src="@drawable/exercise" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/new_exercise"
            android:textColor="@color/colorAccentText"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:gravity="left"
        android:paddingHorizontal="24dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_machine_days_exercise"
            android:textColor="@color/colorPrimaryText" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:gravity="center_vertical"
        android:paddingHorizontal="24dp">

        <Spinner
            android:id="@+id/spExerciseMachine"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:backgroundTint="@color/colorPrimaryText" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:gravity="center"
        android:padding="8dp">

        <CheckBox
            android:id="@+id/cbNewExerciseA"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:foregroundTint="@color/colorAccent" />

        <CheckBox
            android:id="@+id/cbNewExerciseB"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_toRightOf="@id/cbNewExerciseA"
            android:foregroundTint="@color/colorAccent" />

        <CheckBox
            android:id="@+id/cbNewExerciseC"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_toRightOf="@id/cbNewExerciseB"
            android:foregroundTint="@color/colorAccent" />

        <CheckBox
            android:id="@+id/cbNewExerciseD"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_toRightOf="@id/cbNewExerciseC"
            android:foregroundTint="@color/colorAccent" />

        <TextView
            android:id="@+id/tvNewExerciseA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/cbNewExerciseA"
            android:layout_alignStart="@id/cbNewExerciseA"
            android:layout_marginHorizontal="11dp"
            android:text="@string/a_caps"
            android:textColor="@color/colorPrimaryText"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvNewExerciseB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/cbNewExerciseB"
            android:layout_marginHorizontal="11dp"
            android:layout_toRightOf="@id/tvNewExerciseA"
            android:text="@string/b_caps"
            android:textColor="@color/colorPrimaryText"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvNewExerciseC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/cbNewExerciseC"
            android:layout_marginHorizontal="11dp"
            android:layout_toRightOf="@id/tvNewExerciseB"
            android:text="@string/c_caps"
            android:textColor="@color/colorPrimaryText"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvNewExerciseD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/cbNewExerciseD"
            android:layout_marginHorizontal="11dp"
            android:layout_toRightOf="@id/tvNewExerciseC"
            android:text="@string/d_caps"
            android:textColor="@color/colorPrimaryText"
            android:textSize="14sp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:gravity="right"
        android:orientation="horizontal"
        android:padding="8dp">

        <Button
            android:id="@+id/btDialogNewExerciseCancel"
            style="@style/luiz_btn_inverse"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:clickable="true"
            android:fontFamily="sans-serif-medium"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/cancel_caps"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btDialogNewExerciseSave"
            style="@style/luiz_btn_inverse"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:clickable="true"
            android:fontFamily="sans-serif-medium"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/save_caps"
            android:textSize="14sp" />

    </LinearLayout>


</LinearLayout>