<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialogNewMachine"
    android:layout_width="280dp"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@color/colorDarkYellow"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="12dp"
        android:paddingStart="24sp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="center"
            android:src="@drawable/machine" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/new_machine"
            android:textColor="@color/colorAccentText"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilNewMachineNumberLayout"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="16dp"
            android:gravity="top"
            android:paddingHorizontal="24dp"
            android:textColorHint="@color/colorPrimaryText">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tieNewMachineNumber"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:backgroundTint="@color/colorPrimaryText"
                android:ellipsize="start"
                android:hint="@string/number"
                android:inputType="number"
                android:textColor="@color/colorPrimaryText"
                android:textSize="16sp" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilNewMachineNameLayout"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:gravity="top"
            android:paddingHorizontal="24dp"
            android:textColorHint="@color/colorPrimaryText">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tieNewMachineName"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:backgroundTint="@color/colorPrimaryText"
                android:ellipsize="start"
                android:hint="@string/name"
                android:textColor="@color/colorPrimaryText"
                android:textSize="16sp" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="24dp">

        <ImageView
            android:id="@+id/ivNewMachineColor"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="20dp"
            android:background="@color/colorBlue" />

        <Spinner
            android:id="@+id/spNewMachineColor"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:backgroundTint="@color/colorPrimaryText" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:gravity="right"
        android:orientation="horizontal"
        android:padding="8dp">

        <Button
            android:id="@+id/btDialogNewMachineCancel"
            style="@style/luiz_btn_inverse"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:clickable="true"
            android:fontFamily="sans-serif-medium"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/cancel_caps"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btDialogNewMachineSave"
            style="@style/luiz_btn_inverse"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:clickable="true"
            android:fontFamily="sans-serif-medium"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/save_caps"
            android:textSize="14sp" />

    </LinearLayout>


</LinearLayout>