<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:id="@+id/llDay"
        android:layout_width="match_parent"
        android:layout_height="20dp">

        <TextView
            android:id="@+id/tvExerciseDay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark"
            android:gravity="center_horizontal"
            android:text="@string/a_caps"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="88dp"
        android:background="@color/colorPrimary"
        android:foreground="?attr/selectableItemBackground"
        android:longClickable="true"
        android:paddingEnd="16dp">

        <TextView
            android:id="@+id/tvExerciseMachineNumber"
            android:layout_width="88dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="99"
            android:textSize="32sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/tvExerciseMachineNumber"
            android:paddingVertical="8dp"
            android:paddingStart="20dp"
            android:paddingEnd="5dp">

            <TextView
                android:id="@+id/tvExerciseMachineName"
                android:layout_width="match_parent"
                android:layout_height="28dp"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:paddingEnd="5dp"
                android:text="Machine name"
                android:textColor="@color/colorPrimaryText"
                android:textSize="22dp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/llDays"
                android:layout_below="@+id/tvExerciseMachineName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvWorkoutDayA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/a_caps"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvWorkoutDayB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/b_caps"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvWorkoutDayC"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/c_caps"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvWorkoutDayD"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/d_caps"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold" />

            </LinearLayout>

        </RelativeLayout>

        <TextView
            android:id="@+id/tvWorkoutExerciseId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="id"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tvWorkoutMachineId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="id"
            android:visibility="gone" />

    </RelativeLayout>

</LinearLayout>
